--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,15 @@
 // Widescreens
 @include mediaXl {
-
+    .projects {
+        grid-template-columns: repeat(4,1fr); 
+    }
 }
 
 // Desktops & Laptops
 @include mediaLg {
-
+    .projects {
+        grid-template-columns: repeat(3,1fr);
+    }
 }
 
 // Tablets & Small Laptops
@@ -55,6 +59,10 @@
         'job3';
 
         grid-template-columns: 1fr;
+
+        .projects {
+            grid-template-columns: repeat(2,1fr);
+        }
     }
 }
 
@@ -63,5 +71,9 @@
   main#home h1 {
     margin-top: 10vh;
   }
+
+  .projects {
+    grid-template-columns: 1fr;
+}
 }
 
